--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbc_ondi.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbc_ondi.dtsi
@@ -12,12 +12,13 @@
  /* 2019-03-07 - Copy from imx6ul-ccimx6ulsbc.dtsi 
  *  2019-03-07 - activation fec1 and fec2 (Eth), pwm5 (LCD backligth), uart3 (RS232), uart5 (USB console), usbotg1, usbotg2, usdhc2 (microSD/eMMC)
  *               modification lcdif
+ *  2019-05-02 - retrait des activations car c'est fait dans le dts
  */
 
 / {
 	model = "Digi International ConnectCore 6UL SBC.";
 	compatible = "digi,ccimx6ulsbc", "digi,ccimx6ul", "fsl,imx6ul";
-	digi,machine,name = "ccimx6ulsbc";
+	digi,machine,name = "ccimx6ulsbc_ondi";
 
 	lcd_backlight: backlight {
 		compatible = "pwm-backlight";
@@ -96,7 +97,7 @@
 	phy-reset-gpios = <&mca_gpio 7 GPIO_ACTIVE_LOW>;
 	phy-reset-duration = <26>;
 	digi,phy-reset-in-suspend;
-	status = "okay";
+	status = "disabled";
 };
 
 &fec2 {
@@ -109,7 +110,7 @@
 	phy-reset-gpios = <&gpio5 6 GPIO_ACTIVE_LOW>;
 	phy-reset-duration = <26>;
 	digi,phy-reset-in-suspend;
-	status = "okay";
+	status = "disabled";
 
 	/*
 	 * The MDIO bus is shared between ENET1 and ENET2. If you only want
@@ -185,7 +186,7 @@
 		irq-gpios = <&gpio5 2 GPIO_ACTIVE_HIGH>;
 		skip-firmware-request;
 		reload-fw-on-resume;
-		status = "disabled";
+		status = "okay";
 	};
 
 	goodix_touch2: gt911@5D {
@@ -198,7 +199,7 @@
 		irq-gpios = <&gpio5 2 GPIO_ACTIVE_HIGH>;
 		skip-firmware-request;
 		reload-fw-on-resume;
-		status = "disabled";
+		status = "okay";
 	};
 
 	max98089: codec@10 {
@@ -394,7 +395,7 @@
 	pinctrl-0 = <&pinctrl_pwm5>;
 	clocks = <&clks IMX6UL_CLK_PWM5>,
 		 <&clks IMX6UL_CLK_PWM5>;
-	status = "okay";
+	status = "disabled";
 };
 
 &pwm6 {
@@ -445,7 +446,7 @@
 &uart5 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart5>;
-	status = "okay";
+	status = "disabled";
 };
 
 &usbotg1 {
@@ -453,14 +454,14 @@
 	vbus-supply = <&reg_usb_otg1_vbus>;
 	pinctrl-0 = <&pinctrl_usbotg1>;
 	digi,power-line-active-high;
-	status = "okay";
+	status = "disabled";
 };
 
 &usbotg2 {
 	dr_mode = "host";
 	digi,power-line-active-high;
 	disable-over-current;
-	status = "okay";
+	status = "disabled";
 };
 
 /* USDHC2 (microSD/eMMC) */
@@ -468,7 +469,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc2>;
 	no-1-8-v;
-	status = "okay";
+	status = "disabled";
 };
 
 &iomuxc {
