--- a/arch/arm/boot/dts/imx6ul-ccimx6ulsbc_ondi.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulsbc_ondi.dtsi
@@ -267,7 +267,7 @@
 	lcd-supply = <&ldo4_ext>;       /* BU90T82 LVDS bridge power */
 	/*display = <&g101evn010>;*/
 	display = <&dt070btft>;
-	status = "okay";
+	status = "disabled";
 
 	f07a0102: display@0 {
 		bits-per-pixel = <16>;
